Refactor linker